Restructure project skeleton.

--- a/IM/messenger/messenger.qrc
+++ b/IM/messenger/messenger.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/IM">
-        <file alias="main.qml">main.qml</file>
+        <file alias="main.qml">qml/main.qml</file>
     </qresource>
 </RCC>
