--- a/IM/messenger/messenger.qrc
+++ b/IM/messenger/messenger.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/IM">
         <file alias="main.qml">qml/main.qml</file>
+        <file alias="Button.qml">qml/Button.qml</file>
     </qresource>
 </RCC>
