--- a/IM/messenger/messenger.qrc
+++ b/IM/messenger/messenger.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/IM">
         <file alias="main.qml">qml/main.qml</file>
         <file alias="Button.qml">qml/Button.qml</file>
+        <file alias="Nickname.qml">qml/Nickname.qml</file>
     </qresource>
 </RCC>
